--- a/src/components/tilesSelect/TilesSelect.module.scss
+++ b/src/components/tilesSelect/TilesSelect.module.scss
@@ -34,6 +34,7 @@
     line-height: 1;
     position: relative;
     top: 2px;
+    text-align: left;
   }
 
   .price {
